- update swagger - update deployment spec - update generated api - add recommender - update router for location data - add dockerfile - add makefile
