# backend-api/gen/dto/location_data.go
@@ -17,7 +17,7 @@ import (
 type LocationData struct {
 
 	// soiltype
-	Soiltype string `json:"soiltype,omitempty"`
+	Soiltype *SoilType `json:"soiltype,omitempty"`
 
 	// weather almanac
 	WeatherAlmanac *WeatherAlmanac `json:"weatherAlmanac,omitempty"`
@@ -27,6 +27,11 @@ type LocationData struct {
 func (m *LocationData) Validate(formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.validateSoiltype(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
 	if err := m.validateWeatherAlmanac(formats); err != nil {
 		// prop
 		res = append(res, err)
@@ -35,6 +40,25 @@ func (m *LocationData) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *LocationData) validateSoiltype(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Soiltype) { // not required
+		return nil
+	}
+
+	if m.Soiltype != nil {
+
+		if err := m.Soiltype.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("soiltype")
+			}
+			return err
+		}
+	}
+
 	return nil
 }
 
