# backend-api/gen/dto/soil_type.go
@@ -1,0 +1,55 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package dto
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// SoilType soil type
+// swagger:model SoilType
+type SoilType struct {
+
+	// clay
+	Clay int64 `json:"clay,omitempty"`
+
+	// sand
+	Sand int64 `json:"sand,omitempty"`
+
+	// silt
+	Silt int64 `json:"silt,omitempty"`
+}
+
+// Validate validates this soil type
+func (m *SoilType) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SoilType) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SoilType) UnmarshalBinary(b []byte) error {
+	var res SoilType
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
