# backend-api/pkg/handler/location.go
@@ -8,6 +8,8 @@ import (
 	"gitlab.com/henkvanramshorst/forest/backend-api/gen/dto"
 	"github.com/go-chi/render"
 	"encoding/json"
+	"math/rand"
+	"time"
 )
 
 type LocationHandler struct {
@@ -38,13 +40,27 @@ func (h *LocationHandler) GetLocationData(w http.ResponseWriter, r *http.Request
 		return
 	}
 
-	res, err := json.Marshal(almanac)
+	random := rand.New(rand.NewSource(time.Now().UnixNano()))
+	silt := random.Int63n(100)
+	sand := random.Int63n(100)
+	clay := random.Int63n(100)
+
+	response := &dto.LocationData{
+		WeatherAlmanac: almanac,
+		Soiltype: &dto.SoilType{
+			Clay: clay,
+			Sand: sand,
+			Silt: silt,
+		},
+	}
+
+	respBytes, err := json.Marshal(response)
 	if err != nil {
 		w.WriteHeader(500)
-		w.Write([]byte("could not get almanac data"))
+		w.Write([]byte("could not marshal final response"))
 		return
 	}
 
-	w.Write(res)
+	w.Write(respBytes)
 }
 
